--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -96,6 +96,7 @@
 
 \newcommand{\e}[1]{\ensuremath{\mbox{$10^{#1}$}}\xspace}
 \newcommand{\E}[1]{\ensuremath{\mbox{$10^{#1}$}} \eV\xspace}
+\newcommand{\dg}[1]{\ensuremath{\mbox{#1$^\circ$}}\xspace}
 
 
 \newcommand{\nmu}{\ensuremath{\mbox{$N_\mu$}}\xspace}
