--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,268 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{CIC1961,
+  title = {Observations of Extensive Air Showers near the Maximum of Their Longitudinal Development},
+  author = {Hersil, J. and Escobar, I. and Scott, D. and Clark, G. and Olbert, S.},
+  journal = {Phys. Rev. Lett.},
+  volume = {6},
+  issue = {1},
+  pages = {22--23},
+  numpages = {0},
+  year = {1961},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.6.22},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.6.22}
+}
+
+
+@article{Greisen1956,
+author = {Greisen, K.},
+journal = {Progress of Theoretical Physics Supplement},
+volume = {3},
+pages = {1},
+year = {1956}
+}
+
+@article{Kamata1958,
+author = {Kamata, Koichi and Nishimura, Jun},
+title = {The Lateral and the Angular Structure Functions of Electron Showers},
+journal = {Progress of Theoretical Physics Supplement},
+volume = {6},
+pages = {93-155},
+year = {1958},
+doi = {10.1143/PTPS.6.93}
+}
+
+
+@article{Aab:2014gua,
+      author         = "Aab, Alexander and others",
+      title          = "{Reconstruction of inclined air showers detected with the
+                        Pierre Auger Observatory}",
+      collaboration  = "Pierre Auger",
+      journal        = "JCAP",
+      volume         = "1408",
+      year           = "2014",
+      number         = "08",
+      pages          = "019",
+      doi            = "10.1088/1475-7516/2014/08/019",
+      eprint         = "1407.3214",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "FERMILAB-PUB-14-234-AD-AE-CD-TD",
+      SLACcitation   = "%%CITATION = ARXIV:1407.3214;%%"
+}
+
+@article{GaisserHillas1977,
+   author = {Gaisser, T.~K. and Hillas, A.~M.},
+    title = "{Reliability of the method of constant intensity cuts for reconstructing the average development of vertical showers}",
+  journal = {International Cosmic Ray Conference},
+     year = 1977,
+   volume = 8,
+    pages = {353-357}
+}
+
+
+@article{Gonzalez:2016ora,
+      author         = "Gonzalez, Javier G. and Engel, Ralph and Roth, Markus",
+      title          = "{Mass composition sensitivity of combined arrays of water
+                        cherenkov and scintillation detectors in the EeV range}",
+      journal        = "Astropart. Phys.",
+      volume         = "74",
+      year           = "2016",
+      pages          = "37-46",
+      doi            = "10.1016/j.astropartphys.2015.09.003",
+      SLACcitation   = "%%CITATION = APHYE,74,37;%%"
+}
+
+@article{Aab:2018chp,
+      author         = "Aab, Alexander and others",
+      title          = "{Indication of anisotropy in arrival directions of
+                        ultra-high-energy cosmic rays through comparison to the
+                        flux pattern of extragalactic gamma-ray sources}",
+      collaboration  = "Pierre Auger",
+      journal        = "Astrophys. J. Lett.",
+      year           = "2018",
+      doi            = "10.3847/2041-8213/aaa66d",
+      eprint         = "1801.06160",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "FERMILAB-PUB-17-358",
+      SLACcitation   = "%%CITATION = ARXIV:1801.06160;%%"
+}
+
+@article{Aab:2017tyv,
+      author         = "Aab, Alexander and others",
+      title          = "{Observation of a Large-scale Anisotropy in the Arrival
+                        Directions of Cosmic Rays above $8 \times 10^{18}$ eV}",
+      collaboration  = "Pierre Auger",
+      journal        = "Science",
+      volume         = "357",
+      year           = "2017",
+      number         = "6537",
+      pages          = "1266-1270",
+      doi            = "10.1126/science.aan4338",
+      eprint         = "1709.07321",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "FERMILAB-PUB-17-354",
+      SLACcitation   = "%%CITATION = ARXIV:1709.07321;%%"
+}
+
+@article{Aab:2016vlz,
+      author         = "Aab, Alexander and others",
+      title          = "{The Pierre Auger Observatory Upgrade - Preliminary
+                        Design Report}",
+      collaboration  = "Pierre Auger",
+      year           = "2016",
+      eprint         = "1604.03637",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      reportNumber   = "FERMILAB-DESIGN-2016-05",
+      SLACcitation   = "%%CITATION = ARXIV:1604.03637;%%"
+}
+
+@inproceedings{Suomijarvi:2017ixb,
+      author         = "Suomijärvi, Tiina",
+      title          = "{New electronics for the surface detectors of the Pierre
+                        Auger Observatory}",
+      booktitle      = "{The Pierre Auger Observatory: Contributions to the 35th
+                        International Cosmic Ray Conference (ICRC 2017)}",
+      collaboration  = "Pierre Auger",
+      url            = "http://inspirehep.net/record/1618431/files/1617990_155-160.pdf",
+      year           = "2017",
+      pages          = "155-160",
+      SLACcitation   = "%%CITATION = INSPIRE-1618431;%%"
+}
+
+@inproceedings{Martello:2017pch,
+      author         = "Martello, Daniele",
+      title          = "{The Pierre Auger Observatory Upgrade}",
+      booktitle      = "{The Pierre Auger Observatory: Contributions to the 35th
+                        International Cosmic Ray Conference (ICRC 2017)}",
+      collaboration  = "Pierre Auger",
+      url            = "http://inspirehep.net/record/1618430/files/1617990_147-154.pdf",
+      year           = "2017",
+      pages          = "147-154",
+      SLACcitation   = "%%CITATION = INSPIRE-1618430;%%"
+}
+
+@article{Platino:2011zz,
+      author         = "Platino, M. and others",
+      title          = "{AMIGA at the Auger Observatory: The scintillator module
+                        testing system}",
+      journal        = "JINST",
+      volume         = "6",
+      year           = "2011",
+      pages          = "P06006",
+      doi            = "10.1088/1748-0221/6/06/P06006",
+      SLACcitation   = "%%CITATION = JINST,6,P06006;%%"
+}
+
+@inproceedings{Kelley:2011zz,
+      author         = "Kelley, John L.",
+      title          = "{AERA: The Auger Engineering Radio Array}",
+      booktitle      = "{Proceedings, 32nd International Cosmic Ray Conference
+                        (ICRC 2011): Beijing, China, August 11-18, 2011}",
+      collaboration  = "Pierre Auger",
+      url            = "http://inspirehep.net/record/924986/files/924986.pdf",
+      volume         = "3",
+      year           = "2011",
+      pages          = "112",
+      doi            = "10.7529/ICRC2011/V03/0556",
+      SLACcitation   = "%%CITATION = INSPIRE-924986;%%"
+}
+
+@inproceedings{Wundheiler:2011zz,
+      author         = "Wundheiler, Brian",
+      title          = "{The AMIGA muon counters of the Pierre Auger Observatory:
+                        Performance and first data}",
+      booktitle      = "{Proceedings, 32nd International Cosmic Ray Conference
+                        (ICRC 2011): Beijing, China, August 11-18, 2011}",
+      collaboration  = "Pierre Auger",
+      url            = "http://inspirehep.net/record/924987/files/924987.pdf",
+      volume         = "3",
+      year           = "2011",
+      pages          = "84",
+      doi            = "10.7529/ICRC2011/V03/0341",
+      SLACcitation   = "%%CITATION = INSPIRE-924987;%%"
+}
+
+@inproceedings{Suarez:2013ecb,
+      author         = "Suarez, Federico",
+      title          = "{The AMIGA muon detectors of the Pierre Auger
+                        Observatory: overview and status}",
+      booktitle      = "{Proceedings, 33rd International Cosmic Ray Conference
+                        (ICRC2013): Rio de Janeiro, Brazil, July 2-9, 2013}",
+      collaboration  = "Pierre Auger",
+      url            = "http://www.cbpf.br/%7Eicrc2013/papers/icrc2013-0712.pdf",
+      year           = "2013",
+      pages          = "0712",
+      SLACcitation   = "%%CITATION = INSPIRE-1412770;%%"
+}
+
+@inproceedings{Mathes:2011zz,
+      author         = "Mathes, T. Hermann-Josef",
+      title          = "{The HEAT telescopes of the Pierre Auger Observatory:
+                        Status and first data}",
+      booktitle      = "{Proceedings,  	 32nd International Cosmic Ray Conference
+                        (ICRC 2011): Beijing, China, August 11-18, 2011}",
+      collaboration  = "Pierre Auger",
+      url            = "http://inspirehep.net/record/924989/files/924989.pdf",
+      volume         = "3",
+      year           = "2011",
+      pages          = "153",
+      doi            = "10.7529/ICRC2011/V03/0761",
+      SLACcitation   = "%%CITATION = INSPIRE-924989;%%"
+}
+
+@article{Abreu:2017vsj,
+      author         = "Abreu, P. and others",
+      title          = "{MARTA: A high-energy cosmic-ray detector concept with
+                        high-accuracy muon measurement}",
+      year           = "2017",
+      eprint         = "1712.07685",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "FERMILAB-PUB-17-609-TD",
+      SLACcitation   = "%%CITATION = ARXIV:1712.07685;%%"
+}
+
+@article{Abraham:2009pm,
+      author         = "Abraham, J. and others",
+      title          = "{The Fluorescence Detector of the Pierre Auger
+                        Observatory}",
+      collaboration  = "Pierre Auger",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A620",
+      year           = "2010",
+      pages          = "227-251",
+      doi            = "10.1016/j.nima.2010.04.023",
+      eprint         = "0907.4282",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      reportNumber   = "FERMILAB-PUB-09-385-A-CD-PPD-TD",
+      SLACcitation   = "%%CITATION = ARXIV:0907.4282;%%"
+}
+
+@article{Allekotte:2007sf,
+      author         = "Allekotte, I. and others",
+      title          = "{The Surface Detector System of the Pierre Auger
+                        Observatory}",
+      collaboration  = "Pierre Auger",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A586",
+      year           = "2008",
+      pages          = "409-420",
+      doi            = "10.1016/j.nima.2007.12.016",
+      eprint         = "0712.2832",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      reportNumber   = "FERMILAB-PUB-07-664-E-TD",
+      SLACcitation   = "%%CITATION = ARXIV:0712.2832;%%"
+}
+
 @inproceedings{Fuhrmann:2013lgx,
       author         = "Fuhrmann, Daniel and others",
       title          = "{KASCADE-Grande measurements of energy spectra for
