--- a/introduction.tex
+++ b/introduction.tex
@@ -1,3 +1,57 @@
 \chapter[Introduction]{Introduction}
 \label{sec:introduction}
 
+The Earth is constantly being reached by charged particles
+coming from extraterrestrial sources, which are called Cosmic Rays.
+For over a century, the study of these particles have been a very active field
+that integrates aspects from both particle physics and astrophysics.
+The extremelly wide energy range covered by the well know cosmic rays
+energy spectrum make clear that a number of different astrophysical phenomena,
+at distinct scales, are contributing to the production of these particles.
+
+Of particular interest is the ultra-high energy range that includes
+particles from $E=\E{17}$ up the end of the spectrum at $\sim\E{20.5}$. 
+Althought the existence of these ultra-high energy particles is known
+since the 1960's, due to detections done by Haverah Park experiment,
+the precise measurements of their energy spectra and other features
+became possible after the 1990's, with the experiments Fly's Eyes,
+HiRes and AGASA. During the last decade, two modern experiments have
+been running at the ultra-high energy range, Pierre Auger Observatory
+and Telescope Array.
+Even though a large number of important results have been provided
+by these experiments lately, the main question about the origin
+of ultra-high energy cosmic rays are still unsolved. 
+Apart from knowing the astrophysical sources and the acceleration
+mechanisms, it is also unclear what is the exact nature of two evident structures
+observed in the energy spectrum, the \emph{ankle} and the \emph{suppression}.
+
+
+The compreesion of the astrophysical aspects behind the cosmic rays
+is mainly complicated by the fact that they cannot be directly measured
+at the high energy regime. Their detection is actually done by measuring
+the cascade of particles created by the interaction of the cosmic ray particle
+with atmospheric nuclei, the so called \emph{Extensive Air Showers}.  
+
+
+The inferences of the properties of the primary cosmic ray have then
+to be done by means of the measured features of the 
+
+
+
+
+
+-cosmic rays->uhe->open questions
+
+-cr->showers->understanding to infer
+
+-muons->muon deficit problem
+
+-augerprime->chap 3 and 4->simulation studies
+
+-na61->pion-air
+
+
+
+
+
+
